# aub-clubs

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.inference  Dockerfile.migrate  Dockerfile.seed  README.md  RUN.md  SUPABASE_CONFIG.md  agents.md  clubs.json  et --hard 1efe9a2  fly.toml  image.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  prompt.md  tags.json  tallnpm install
.github/workflows/: build.yml  deploy.yml  e2e.yml  image-ci.yml
deployment/kluctl/: .kluctl.yaml  Taskfile.yaml  deployment.yaml
deployment/kluctl-gitops/: .kluctl.yaml
e2e/: fixtures.ts  smoke.spec.ts
inference/: .dockerignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml
inngest-exxample/: CreateScriptPage.tsx
inngest-exxample/ai-ide-agent/: .gitignore  app.ts  eslint.config.mjs  index.ts  package-lock.json  package.json  tsconfig.json
inngest-exxample/ai-ide-gql/: Dockerfile  go.mod  go.sum  gqlgen.yml  server.go
mcp-server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  fly.toml  package-lock.json  package.json
mcp-server/src/: auth.ts  db.ts  index.ts  logger.ts  server.ts
operations/: build_image.sh  builder_setup.sh  sync_gsm_env.js  tag-gen.sh  update_deployment_tags.js  update_tags_json.js
prisma/: schema.prisma  seed.ts
src/: middleware.ts  prompt.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/hooks/: useIsMobile.ts
src/inngest/: client.ts  function.ts  utils.ts
src/lib/: client-image-upload.ts  supabase-storage.ts
(+337 files in other folders)
